<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">


        <RelativeLayout
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_40"
            android:layout_centerHorizontal="true">
            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_welcome"
                android:layout_centerHorizontal="true"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/rocket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_welcome"
                android:layout_marginTop="9dp"
                android:src="@drawable/launch3" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tip">
            <RelativeLayout
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_30"
                android:layout_marginRight="@dimen/dp_30">
                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/user"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dp_15"/>

                <EditText
                    android:id="@+id/user_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_10"
                    android:background="@drawable/corner_shape"
                    android:hint="@string/username_hint"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColor="@color/white_color"
                    android:textColorHint="@color/white_color"
                    android:paddingStart="@dimen/dp_40"
                    android:paddingEnd="@dimen/dp_5"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_35"
                android:layout_marginRight="@dimen/dp_35"
                android:layout_below="@+id/user">
                <ImageView
                    android:id="@+id/pass_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/password"
                    android:layout_centerVertical="true"
                    android:paddingStart="@dimen/dp_10"/>

                <EditText
                    android:id="@+id/pass_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:background="@drawable/corner_shape"
                    android:hint="@string/password_hint"
                    android:inputType="numberPassword"
                    android:padding="@dimen/dp_10"
                    android:singleLine="true"
                    android:textColorHint="@color/white_color"
                    android:textColor="@color/white_color"
                    android:paddingStart="@dimen/dp_45"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:layout_below="@+id/password">

                <CheckBox
                    android:id="@+id/keep_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_30"
                    android:checked="true"
                    android:text="@string/CheckBox_hint_user"
                    android:textColor="@color/black_color"/>

                <CheckBox
                    android:id="@+id/keep_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:checked="true"
                    android:text="@string/CheckBox_hint_password"
                    android:textColor="@color/black_color"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_shape"
                android:text="@string/button_login"
                android:textColor="@color/white_color"
                android:layout_below="@+id/checkbox"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>


</RelativeLayout>
